<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/ThemeOverlay.Material.Dark">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <View
        android:id="@+id/coloredSide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/beriuzavi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />


    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/num0"
        android:textAlignment="viewEnd"
        android:textColor="@color/shrift"
        android:textSize="@dimen/resultsTextSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/num9"
        style="@style/numiricButtonStyle"
        android:padding="0dp"
        android:text="@string/num9"
        app:layout_constraintBottom_toTopOf="@+id/num6"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
        app:layout_constraintStart_toEndOf="@+id/num8"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/num6"
        style="@style/numiricButtonStyle"
        android:text="@string/num6"
        app:layout_constraintBottom_toTopOf="@+id/num3"
        app:layout_constraintEnd_toStartOf="@id/buttonDiv"
        app:layout_constraintStart_toEndOf="@+id/num5"
        app:layout_constraintTop_toBottomOf="@+id/num9" />

    <Button
        android:id="@+id/buttonEqual"
        style="@style/numiricButtonStyle"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/num0"
        app:layout_constraintTop_toBottomOf="@+id/num3" />

    <Button
        android:id="@+id/num3"
        style="@style/numiricButtonStyle"
        android:text="@string/num3"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintStart_toEndOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/num6" />

    <Button
        android:id="@+id/num8"
        style="@style/numiricButtonStyle"
        android:text="@string/num8"
        app:layout_constraintBottom_toTopOf="@+id/num5"
        app:layout_constraintEnd_toStartOf="@+id/num9"
        app:layout_constraintStart_toEndOf="@+id/num7"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/num5"
        style="@style/numiricButtonStyle"
        android:text="@string/num5"
        app:layout_constraintBottom_toTopOf="@+id/num2"
        app:layout_constraintEnd_toStartOf="@+id/num6"
        app:layout_constraintStart_toEndOf="@+id/num4"
        app:layout_constraintTop_toBottomOf="@+id/num8" />

    <Button
        android:id="@+id/num2"
        style="@style/numiricButtonStyle"
        android:text="@string/num2"
        app:layout_constraintBottom_toTopOf="@+id/num0"
        app:layout_constraintEnd_toStartOf="@+id/num3"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/num5" />

    <Button
        android:id="@+id/num0"
        style="@style/numiricButtonStyle"
        android:text="@string/num0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintStart_toEndOf="@+id/buttonDot"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/num7"
        style="@style/numiricButtonStyle"
        android:text="@string/num7"
        app:layout_constraintBottom_toTopOf="@+id/num4"
        app:layout_constraintEnd_toStartOf="@+id/num8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/num4"
        style="@style/numiricButtonStyle"
        android:text="@string/num4"
        app:layout_constraintBottom_toTopOf="@+id/num1"
        app:layout_constraintEnd_toStartOf="@+id/num5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num7" />

    <Button
        android:id="@+id/num1"
        style="@style/numiricButtonStyle"
        android:text="@string/num1"
        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num4" />

    <Button
        android:id="@+id/buttonDot"
        style="@style/numiricButtonStyle"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/buttonDelete"
        style="@style/operationButtonStyle"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:text="@string/del"
        app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
        app:layout_constraintEnd_toStartOf="@+id/coloredSide"
        app:layout_constraintStart_toEndOf="@+id/num9"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonDiv"
        style="@style/operationButtonStyle"
        android:text="@string/div"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toStartOf="@+id/coloredSide"
        app:layout_constraintStart_toEndOf="@+id/num6"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/operationButtonStyle"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toStartOf="@+id/coloredSide"
        app:layout_constraintStart_toEndOf="@+id/num3"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv" />

    <Button
        android:id="@+id/buttonPlus"
        style="@style/operationButtonStyle"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/coloredSide"
        app:layout_constraintStart_toEndOf="@+id/buttonEqual"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/greyDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/num6"
        app:layout_constraintStart_toStartOf="@+id/num4"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/greyNotDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/coloredSide"
        app:layout_constraintStart_toEndOf="@+id/num6"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8832117" />
</androidx.constraintlayout.widget.ConstraintLayout>